--- a/package.json
+++ b/package.json
@@ -25,11 +25,16 @@
     "@babel/polyfill": "^7.10.1",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.2",
     "eslint-plugin-react-hooks": "^4.0.4",
@@ -37,6 +42,7 @@
     "gulp-zip": "^5.0.2",
     "merge-stream": "^2.0.0",
     "mime-types": "^2.1.27",
+    "personium-sdk-ts": "file:packages/personium-sdk-ts",
     "prettier": "^1.19.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -44,7 +50,10 @@
     "react-router-dom": "^5.2.0",
     "request": "^2.88.2",
     "request-promise": "^4.2.5",
+    "source-map-loader": "^1.1.0",
+    "ts-loader": "^8.0.4",
     "tunnel": "0.0.6",
+    "typescript": "^4.0.3",
     "webdav": "git+https://github.com/yoh1496/webdav-client.git#feature/updateProperty",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
